--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
             <!--break-->
             <div class="grid-col col-span-three"></div>
             <div class="grid-col col-span-six">
-                <img src="images/content/pbweb18-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb18-min.JPG" alt="" width="100%" height="100%">
             </div>
             <div class="grid-col col-span-three">
-                <img src="images/content/pbweb19-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb19-min.JPG" alt="" width="100%" height="100%">
             </div>
         </div>
 
