--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="grid-col col-span-three"></div>
             <div class="grid-col col-span-three">
         
-                <img class="about-me-image" src="images/content/pbweb30-min.jpg" alt="" >
+                <img class="about-me-image" src="images/content/pbweb30-min.JPG" alt="">
                 
             </div>    
             <div class="about-me-text-container grid-col col-span-six">
