--- a/index.html
+++ b/index.html
@@ -524,15 +524,15 @@
             <!--break-->
             <div class="grid-col col-span-three"></div>
             <div class="grid-col col-span-nine">
-                <img src="images/content/pbweb25-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb25-min.JPG" alt="" width="100%" height="100%">
             </div>
             <!--break-->
             <div class="grid-col col-span-three"></div>
             <div class="grid-col col-span-three">
-                <img src="images/content/pbweb31-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb31-min.JPG" alt="" width="100%" height="100%">
             </div>
             <div class="grid-col col-span-six">
-                <img class="spansixphoto" src="images/content/pbweb37-min.jpg" alt="" width="100%" height="100%">
+                <img class="spansixphoto" src="images/content/pbweb37-min.JPG" alt="" width="100%" height="100%">
             </div>
             <!--break-->
             <div class="grid-col col-span-three"></div>
@@ -545,13 +545,13 @@
             <!--break-->
             <div class="grid-col col-span-three"></div>
             <div class="grid-col col-span-three">
-                <img src="images/content/pbweb21-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb21-min.JPG" alt="" width="100%" height="100%">
             </div>
             <div class="grid-col col-span-three">
-                <img src="images/content/pbweb26-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb26-min.JPG" alt="" width="100%" height="100%">
             </div>
             <div class="grid-col col-span-three">
-                <img src="images/content/pbweb27-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb27-min.JPG" alt="" width="100%" height="100%">
             </div>
             <!--break-->
             <div class="grid-col col-span-three"></div>
@@ -561,7 +561,7 @@
             <!--break-->
             <div class="grid-col col-span-three"></div>
             <div class="grid-col col-span-three">
-                <img src="images/content/pbweb20-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb20-min.JPG" alt="" width="100%" height="100%">
             </div>
             <div class="grid-col col-span-six">
                 <img class="spansixphoto" src="images/content/pbweb4-min.jpg" alt="" width="100%" height="100%">
@@ -572,12 +572,12 @@
                 <img class="spansixphoto" src="images/content/pbweb8-min.jpg" alt="" width="100%" height="100%">
             </div>
             <div class="grid-col col-span-three">
-                <img src="images/content/pbweb24-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb24-min.JPG" alt="" width="100%" height="100%">
             </div>
             <!--break-->
             <div class="grid-col col-span-three"></div>
             <div class="grid-col col-span-nine">
-                <img src="images/content/pbweb22-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb22-min.JPG" alt="" width="100%" height="100%">
             </div>
             <!--break-->
             <div class="grid-col col-span-three"></div>
@@ -601,15 +601,15 @@
                 <img src="images/content/pbweb15-min.jpg" alt="" width="100%" height="100%">
             </div>
             <div class="grid-col col-span-three">
-                <img src="images/content/pbweb23-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb23-min.JPG" alt="" width="100%" height="100%">
             </div>
             <!--break-->
             <div class="grid-col col-span-three"></div>
             <div class="grid-col col-span-three">
-                <img src="images/content/pbweb29-min.jpg" alt="" width="100%" height="100%">
+                <img src="images/content/pbweb29-min.JPG" alt="" width="100%" height="100%">
             </div>
             <div class="grid-col col-span-six">
-                <img class="spansixphoto" src="images/content/pbweb28-min.jpg" alt="" width="100%" height="100%">
+                <img class="spansixphoto" src="images/content/pbweb28-min.JPG" alt="" width="100%" height="100%">
             </div>
             <!--break-->
             <div class="grid-col col-span-three"></div>
